--- a/Android_LoginSystem/Resources/layout/Main.axml
+++ b/Android_LoginSystem/Resources/layout/Main.axml
@@ -3,11 +3,60 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<Button  
-    android:id="@+id/MyButton"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/Hello"
-    />
+    android:minWidth="25px"
+    android:minHeight="25px"
+    android:background="@android:color/background_light"
+    android:weightSum="100">
+    <TextView
+        android:text="Create Account"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/txtCreateAccount"
+        android:layout_weight="20"
+        android:textColor="#368dab"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="20dp" />
+    <Button
+        android:text="Sign In"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/btnSignIn"
+        android:layout_weight="15"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
+    <TextView
+        android:text="Or"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/txtOr"
+        android:layout_weight="15"
+        android:textColor="#368dab"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:textStyle="bold" />
+    <Button
+        android:text="Sign up with email"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/btnSignUp"
+        android:layout_weight="15"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
+    <RelativeLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/relativeLayout1"
+        android:layout_weight="35">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar1"
+            android:layout_centerInParent="true"
+            android:indeterminate="true" />
+    </RelativeLayout>
 </LinearLayout>
