--- a/Android_LoginSystem/Resources/layout/Main.axml
+++ b/Android_LoginSystem/Resources/layout/Main.axml
@@ -25,7 +25,9 @@
         android:id="@+id/btnSignIn"
         android:layout_weight="15"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:background="@drawable/ButtonSignInStyle"
+        android:textSize="15dp" />
     <TextView
         android:text="Or"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -44,7 +46,9 @@
         android:id="@+id/btnSignUp"
         android:layout_weight="15"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:background="@drawable/ButtonSignUpStyle"
+        android:textSize="15dp" />
     <RelativeLayout
         android:minWidth="25px"
         android:minHeight="25px"
@@ -57,6 +61,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/progressBar1"
             android:layout_centerInParent="true"
-            android:indeterminate="true" />
+            android:indeterminate="true"
+            android:background="@drawable/progressbarstyle" />
     </RelativeLayout>
 </LinearLayout>
